# contactile_gripper_ros2

./: .gitignore  launch.py
ros2_ws/src/contactile_gripper/: CMakeLists.txt  package.xml
ros2_ws/src/contactile_gripper/launch/: UI.txt  autogen.launch  camera.txt  contactile.txt  control.txt  example.launch  gripper.txt  imu.txt  pose.txt  stepper.txt  sys_test.txt  test_sensor.launch
ros2_ws/src/contactile_gripper/src/: IMU_node.py  camera_node.py  control_node.py  data_recorder_node.py  gripper_node.py  pose_node.py  srv_clients.py  srv_clients_2.py  stepper_node.py  sys_test_node.py  ui_node.py
ros2_ws/src/contactile_gripper/srv/: StepperSetLimit.srv
ros2_ws/src/contactile_gripper/support/: IMU.py  camera.py  dynamixel_motors.py  get_comport_info.py  gripper.py  pose_models.py  rclpy_shadow.py  stepper.py
ros2_ws/src/dynamixel_sdk/: CMakeLists.txt  package.xml
ros2_ws/src/dynamixel_sdk/dynamixel_sdk/: __init__.py  dynamixel_module.py
ros2_ws/src/dynamixel_test/: package.xml  setup.cfg  setup.py
ros2_ws/src/dynamixel_test/dynamixel_test/: __init__.py
